# xtb-trading-bot

./: .env.example  README.md  main.py  plot.html  pyproject.toml  test.csv  test.ipynb
tests/: test_xtb_client.py
xtb_trading_bot/: StreamClient.py  charting.py  commands.py  main.py  strategy.py  time_utils.py  xtb_client.py
